# fair-python-cookiecutter-demo

./: AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  REUSE.toml  codemeta.json  mkdocs.yml  pyproject.toml  somesy.toml  versions.json
.gitlab/issue_templates/: bug_report.md
.reuse/: dep5
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/coverage/: covindex.html  d_2ea7ea25feadd0bc___init___py.html  d_2ea7ea25feadd0bc_api_py.html  d_2ea7ea25feadd0bc_cli_py.html  d_2ea7ea25feadd0bc_lib_py.html  index.html
dev/credits/: index.html
dev/dev_guide/: index.html
dev/license/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
latest/coverage/: d_2ea7ea25feadd0bc___init___py.html  d_2ea7ea25feadd0bc_api_py.html  d_2ea7ea25feadd0bc_cli_py.html  d_2ea7ea25feadd0bc_lib_py.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/coverage/: class_index.html  covindex.html  d_2ea7ea25feadd0bc___init___py.html  d_2ea7ea25feadd0bc_api_py.html  d_2ea7ea25feadd0bc_cli_py.html  d_2ea7ea25feadd0bc_lib_py.html  function_index.html  index.html  status.json  z_2ea7ea25feadd0bc___init___py.html  z_2ea7ea25feadd0bc_api_py.html  z_2ea7ea25feadd0bc_cli_py.html  z_2ea7ea25feadd0bc_lib_py.html
main/credits/: index.html
main/dev_guide/: index.html
main/license/: index.html
main/quickstart/: index.html
main/search/: search_index.json
src/fair_python_cookiecutter_demo/: api.py  cli.py  lib.py
tests/: __init__.py  test_api.py  test_cli.py  test_lib.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/changelog/: index.html
v0.1.0/code_of_conduct/: index.html
v0.1.0/contributing/: index.html
v0.1.0/coverage/: d_2ea7ea25feadd0bc_cli_py.html  index.html
v0.1.0/credits/: index.html
v0.1.0/dev_guide/: index.html
v0.1.0/license/: index.html
v0.1.0/quickstart/: index.html
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/changelog/: index.html
v0.2.0/code_of_conduct/: index.html
v0.2.0/contributing/: index.html
v0.2.0/coverage/: covindex.html  d_2ea7ea25feadd0bc___init___py.html  d_2ea7ea25feadd0bc_api_py.html  d_2ea7ea25feadd0bc_cli_py.html  d_2ea7ea25feadd0bc_lib_py.html  index.html  status.json
v0.2.0/credits/: index.html
v0.2.0/dev_guide/: index.html
v0.2.0/license/: index.html
v0.2.0/quickstart/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/changelog/: index.html
v0.3.0/code_of_conduct/: index.html
v0.3.0/contributing/: index.html
v0.3.0/coverage/: covindex.html  d_2ea7ea25feadd0bc___init___py.html  d_2ea7ea25feadd0bc_api_py.html  d_2ea7ea25feadd0bc_cli_py.html  d_2ea7ea25feadd0bc_lib_py.html  index.html
v0.3.0/credits/: index.html
v0.3.0/dev_guide/: index.html
v0.3.0/license/: index.html
v0.3.0/quickstart/: index.html
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.1/changelog/: index.html
v0.3.1/code_of_conduct/: index.html
v0.3.1/contributing/: index.html
v0.3.1/coverage/: covindex.html  index.html  status.json  z_2ea7ea25feadd0bc___init___py.html  z_2ea7ea25feadd0bc_lib_py.html
v0.3.1/credits/: index.html
v0.3.1/dev_guide/: index.html
v0.3.1/license/: index.html
v0.3.1/quickstart/: index.html
v0.3.2/: 404.html  index.html  sitemap.xml
v0.3.2/changelog/: index.html
v0.3.2/code_of_conduct/: index.html
v0.3.2/contributing/: index.html
v0.3.2/coverage/: class_index.html  covindex.html  function_index.html  index.html  z_2ea7ea25feadd0bc___init___py.html  z_2ea7ea25feadd0bc_api_py.html  (+2 more)
(+42 files in other folders)
